src/test/testData/annotator/AnnotatorTest.monkey
let fastest = fn(xar){
                  let result = <error descr="Can't resolve type">true + 10</error>;
                  return result;
};
let a = <error descr="Can't find a variant declaration">b</error>;
